--- a/package.xml
+++ b/package.xml
@@ -21,6 +21,7 @@
   <depend>tf2_geometry_msgs</depend>
   <depend>tf2</depend>
   <depend>ament_index_cpp</depend>
+  <depend>tinyxml2_vendor</depend>
 
   <exec_depend>ros2launch</exec_depend>
 
