--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
 
   <maintainer email="noeperez@upo.es">Noé Pérez-Higueras</maintainer>
 
-  <license>BSD</license>
+  <license>MIT</license>
 
   <url type="repository">https://github.com/robotics-upo/hunav_gazebo_wrapper</url>
 
