--- a/package.xml
+++ b/package.xml
@@ -15,14 +15,15 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   
-  <depend>rclcpp</depend>
-  <depend>gazebo_ros</depend>
-  <depend>hunav_msgs</depend>
-  <depend>tf2_geometry_msgs</depend>
-  <depend>tf2</depend>
-  <depend>ament_index_cpp</depend>
-  <depend>tinyxml2_vendor</depend>
-
+  <exec_depend>rclcpp</exec_depend>
+  <exec_depend>gazebo_ros</exec_depend>
+  <exec_depend>hunav_msgs</exec_depend>
+  <exec_depend>tf2_geometry_msgs</exec_depend>
+  <exec_depend>tf2</exec_depend>
+  <exec_depend>ament_index_cpp</exec_depend>
+  <exec_depend>tinyxml2_vendor</exec_depend>
+  <exec_depend>ament_index_cpp</exec_depend>
+  <exec_depend>tinyxml2_vendor</exec_depend>
   <exec_depend>ros2launch</exec_depend>
 
   <export>
